# RM_VISION_2024_IST

./: README.md
RM_VISION_2023_IST/: CMakeLists.txt
RM_VISION_2023_IST/arms_detector/include/arms_detector/: arm_and_light.hpp  pnp.hpp
RM_VISION_2023_IST/configuration_file/: setting.toml
RM_VISION_2023_IST/configuration_files/: setting.toml
RM_VISION_2023_IST/original_images_get/include/original_images_get/: GxIAPI.h  daheng_camera.hpp
RM_VISION_2023_IST/original_images_get/src/: daheng_camera.cpp  dahua.cpp
RM_VISION_2023_IST/original_images_get/src/bringup/: image_getter_node.cpp
RM_VISION_2023_IST/src/: CMakeLists.txt  main.cpp
RM_VISION_2023_IST/src/arm_light/: CMakeLists.txt
RM_VISION_2023_IST/src/arm_light/src/: arm_and_light.cpp
RM_VISION_2023_IST/src/arm_ligth/include/: arm_and_light.hpp
RM_VISION_2023_IST/src/arm_track/include/: pnp.hpp
RM_VISION_2023_IST/src/arm_track/src/: pnp.cpp
RM_VISION_2023_IST/src/arms_detector/: CMakeLists.txt
RM_VISION_2023_IST/src/arms_detector/include/arms_detector/: arms_detect.hpp  classifier_shape_of_armor.hpp  img_deal.hpp
RM_VISION_2023_IST/src/arms_detector/src/: arms_detect.cpp  classifier_shape_of_armor.cpp  img_deal.cpp
RM_VISION_2023_IST/src/conf_read/: CMakeLists.txt
RM_VISION_2023_IST/src/conf_read/include/: conf_read.hpp
RM_VISION_2023_IST/src/conf_read/inlcude/: conf_read.hpp
RM_VISION_2023_IST/src/conf_read/src/: conf_read.cpp
RM_VISION_2023_IST/src/original_images_get/: CMakeLists.txt
RM_VISION_2023_IST/src/original_images_get/include/original_images_get/: base_camera.hpp  camera_deal.hpp  dahua_camera.hpp  img_get.hpp
RM_VISION_2023_IST/src/original_images_get/src/: camera_deal.cpp  img_get.cpp
RM_VISION_2023_IST/src/thread/: CMakeLists.txt
RM_VISION_2023_IST/src/thread/include/thread/: basical_thread.hpp  basicthread.hpp  detect_thread.hpp  entitythread.hpp  image_get_thread.hpp
RM_VISION_2023_IST/src/thread/src/: detect_thread.cpp  image_get_thread.cpp
rm_vision_2023_IST/arms_detector/include/arms_detector/: classifier_shape_of_armor.hpp
